Update room.
